[package]
name = "asha-gameplay-runtime-host"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.asha.public-surface]
status = "public"
disposition = "quarantined"
compatibility-entry = "standalone-gameplay-runtime-host"
compatibility-version = "wave1.v1"
diagnostic = "asha.compat.wave1.standalone-gameplay-runtime-host"
replacement = "asha-runtime-session-composition"
deletion-tasks = [5715, 5734]
role = "downstream-gameplay-runtime-host"
source-of-truth = "engine-rs/crates/rules/gameplay-runtime-host"
allowed-consumer-roles = ["asha-demo", "asha-testing", "asha-rulebench"]

[dependencies]
gameplay-runtime-host = { path = "../../engine-rs/crates/rules/gameplay-runtime-host" }
