[package]
name    = "protocol-codegen"
version.workspace = true
edition.workspace = true

[lib]
name = "protocol_codegen"
path = "src/lib.rs"

[[bin]]
name = "protocol-codegen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
protocol-ids = { path = "../protocol-ids" }
protocol-replay = { path = "../protocol-replay" }
