[package]
name = "rule-animation-controller"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids = { path = "../../foundation/core-ids" }
rule-state-machine = { path = "../rule-state-machine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
