[package]
name    = "rule-project-bundle"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-ids          = { path = "../../foundation/core-ids" }
core-assets       = { path = "../../foundation/core-assets" }
core-space        = { path = "../../foundation/core-space" }
core-voxel        = { path = "../../state/core-voxel" }
core-events       = { path = "../../state/core-events" }
core-entity       = { path = "../../state/core-entity" }
core-scene        = { path = "../../state/core-scene" }
svc-volume        = { path = "../../services/svc-volume" }
svc-spatial       = { path = "../../services/svc-spatial" }
svc-serialization = { path = "../../services/svc-serialization" }
svc-voxel-annotation = { path = "../../services/svc-voxel-annotation" }
protocol-voxel-annotation = { path = "../../protocol/protocol-voxel-annotation" }
rule-voxel-edit   = { path = "../rule-voxel-edit" }
serde_json = "1"

[dev-dependencies]
core-math = { path = "../../foundation/core-math" }
