[package]
name    = "rule-scheduler"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-space = { path = "../../foundation/core-space" }
protocol-game-extension = { path = "../../protocol/protocol-game-extension" }
rule-gameplay-fabric = { path = "../rule-gameplay-fabric" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
svc-gameplay-fabric = { path = "../../services/svc-gameplay-fabric" }
