[package]
name = "rule-trigger-volume"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-entity = { path = "../../state/core-entity" }
core-ids = { path = "../../foundation/core-ids" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
core-math = { path = "../../foundation/core-math" }
