[package]
name    = "svc-mesh"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
core-space  = { path = "../../foundation/core-space" }
core-voxel  = { path = "../../state/core-voxel" }
svc-volume  = { path = "../svc-volume" }
svc-spatial = { path = "../svc-spatial" }
