[package]
name = "svc-voxel-annotation"
version = "0.1.0"
edition = "2021"
publish = false

# Rust authority service for validating, canonicalizing, hashing, decoding, and
# querying Asha-native voxel annotation layers. It owns no bridge, renderer,
# Studio, or TypeScript authority.
[dependencies]
core-assets = { path = "../../foundation/core-assets" }
protocol-diagnostics = { path = "../../protocol/protocol-diagnostics" }
protocol-voxel-annotation = { path = "../../protocol/protocol-voxel-annotation" }
serde_json = "1"
